# energyscraper

./: .gitignore  README.md  pyproject.toml
deploy/: README.md  docker-compose.yml  energyscraper-exporter.service  prometheus.yml
deploy/grafana/dashboards/: energyscraper.json
deploy/grafana/provisioning/dashboards/: provider.yml
deploy/grafana/provisioning/datasources/: datasource.yml
energyscraper/: __init__.py  cli.py
tests/: test_cli.py
